FindBugs fixes, String efficiency.  Fix momentary function event monitoring